--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ background-position: 0% 50%, 85% 30%, 85% 105%
 - Non-comparable reports
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
-Examples: 
+Examples: Analyses for [California Ballot Propositions](https://vig.cdn.sos.ca.gov/2020/general/pdf/complete-vig.pdf)
 ]
 ]
 
