added presentation link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Transparency for Policy Analysis: An Application to Deworming Interventions
 ## BITSS Annual Meeting
 ### Fernando Hoces de la Guardia, BITSS
-### 11 February 2022 | <a href="https://bitss-opa.github.io/slides-dw-am2022/#1">slides</a>
+### 11 February 2022 | <a href="https://bitss-opa.github.io/slides-dw-am2022/#1">slides</a> and <a href="https://www.youtube.com/watch?v=fNbtOMLR8eQ">presentation</a>
 
 ---
 
